2004-02-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/filter-lilypond-book.py: Speed-up and clean-ups.

2004-02-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/simultaneous-music-iterator.cc: remove clone() and copy
	constructor from Music_iterator. Changes throughout.

	* lily/include/music-iterator.hh (class Music_iterator): remove
	Music_iterator::skip and Music_iterator::get_pending_events from
	interface. Rename report_to -> get_outlet 

	* lily/auto-change-iterator.cc: move contents from
	new-auto-change-iterator.cc from

	* scm/part-combiner.scm: determine split-list from Scheme. 

	* lily/new-auto-change-iterator.cc (process): new file.

	* lily/parser.yy (part_combined_music): remove old PC cruft.

	* ly/engraver-init.ly: remove old
	PC cruft.

	* Documentation/user/refman.itely (The Lyrics context): note about
	extender lines.

	* lily/multi-measure-rest-engraver.cc (process_music): extra check
	to allow 0-length mmrest events.

	* scm/part-combiner.scm (determine-split-list): many bugfixes.

	* lily/new-part-combine-iterator.cc (kill_mmrest): new function.

	* lily/spacing-engraver.cc (finalize): robustifications.

	* input/regression/new-part-combine-solo-global.ly: new file.

	* scm/part-combiner.scm: rewrite.

2004-02-03  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely, input/puer-fragment.ly,
	input/test/vaticana.ly, ly/engraver-init.ly: ancient examples
	updated for proper use of lyricsto; replaced "(" and ")" ->
	"\melisma" and "\melismaEnd"

	* input/test/ancient-font.ly: small updates to reduce compile
	warnings (TODO: junk this file)

	* input/test/gregorian-scripts.ly: added comment about bug

	* lily/gregorian-ligature-engraver.cc, lily/ligature-engraver.cc:
	tiny robustness fix

	* mf/parmesan-clefs.mf: exact_center fixes (this broke due to
	recent changes in the feta code); temporarily mapped mensural g
	clef to a copy of petrucci g clef until mensural g clef will have
	been rewritten
