@@ -89,7 +89,6 @@ MyVoiceContext = \translator {
 	\consists "Font_size_engraver"
 	
 	% must come before all
-	\consists "Voice_devnull_engraver"
 	\consists "Output_property_engraver"	
 	\consists "Arpeggio_engraver"
 	\consists "Multi_measure_rest_engraver"
@@ -121,7 +120,6 @@ MyVoiceContext = \translator {
 	\consists "Tie_engraver"
 	\consists "Tie_engraver"
 	\consists "Tuplet_engraver"
-	\consists "A2_engraver"
 
 	\consists "Skip_event_swallow_translator"
 	\accepts Thread % bug if you leave out this!
@@ -137,7 +135,6 @@ MyThreadContext = \translator{
     style of individual note heads.
 "
 	\consists "Font_size_engraver"	
-	\consists "Thread_devnull_engraver"
 	\consists "Note_heads_engraver"
 	\consists "Rest_engraver"
 
