@@ -1,3 +1,7 @@
+2004-02-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* input/test: remove octave-duplicate.ly
+
 2004-02-04  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/filter-lilypond-book.py: Speed-up and clean-ups.
